Fixed overflow images on blog

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -233,3 +233,7 @@ a {
     }
   }
 }
+
+.post p>img {
+  max-width: 100%;
+}
